test/spec_vectors/simd_int_to_int_extend/fail/module_15.wat
(module (func $i16x8.extend_low_i8x16_s-arg-empty (result v128) (i16x8.extend_low_i8x16_s)))